@@ -1,3 +1,0 @@
-<?php
-
-$sql[] = "DELETE FROM `{$dbprefix}acces` WHERE `page` = 'personnel/suppression-liste.php';";
