@@ -1936,6 +1936,13 @@ if (version_compare($config['Version'], $v) === -1) {
     $sql[] = "UPDATE `{$dbprefix}config` SET `valeur`='$v' WHERE `nom`='Version';";
 }
 
+$v="20.05.00.005";
+if (version_compare($config['Version'], $v) === -1) {
+    $sql[] = "DELETE FROM `{$dbprefix}acces` WHERE `page` = 'personnel/suppression-liste.php';";
+
+    $sql[] = "UPDATE `{$dbprefix}config` SET `valeur`='$v' WHERE `nom`='Version';";
+}
+
 //	Execution des requetes et affichage
 foreach ($sql as $elem) {
     $db=new db();
